# Research_nyneai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
crates/nyne-er-cli/: Cargo.toml  stdout
crates/nyne-er-cli/src/: main.rs
crates/nyne-er-cli/tests/: cli.rs
crates/nyne-er-core/: Cargo.toml
crates/nyne-er-core/src/: baselines.rs  benchmark.rs  blocking.rs  cluster.rs  datasets.rs  features.rs  hybrid.rs  ingest.rs  lib.rs  live.rs  llm.rs  logistic.rs  metrics.rs  models.rs  schemas.rs  search.rs  similarity.rs  tfidf.rs  util.rs
crates/nyne-er-core/tests/: benchmark_report.rs  blocking.rs  cluster.rs  core.rs  models.rs  pipeline.rs
data/fixtures/: seed_profiles.json
data/raw/: seed_raw_pages.json
reports/: benchmark_metrics.json  blog.md  demo.html
src/nyne_er_lab/: __init__.py  __main__.py  app.py  app_data.py  datasets.py  live.py  schemas.py  search.py
src/nyne_er_lab/blocking/: __init__.py  blocker.py
src/nyne_er_lab/cluster/: __init__.py  resolver.py
src/nyne_er_lab/demo/: __init__.py  builder.py
src/nyne_er_lab/eval/: __init__.py  benchmark.py  clusters.py  metrics.py  splits.py
src/nyne_er_lab/features/: __init__.py  dataset.py  extractor.py
src/nyne_er_lab/ingest/: __init__.py  normalize.py  parsers.py
src/nyne_er_lab/models/: __init__.py  baselines.py  hybrid.py  llm_adjudicator.py
tests/: test_blocking.py  test_cluster.py  test_demo.py  test_features_baselines.py  test_honest_eval.py  test_hybrid.py  test_ingest.py  test_schemas.py
