[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyne-er-lab"
version = "0.1.0"
description = "Interpretable public-web entity resolution lab for AI/ML builders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "numpy>=1.26,<3",
  "pydantic>=2.7,<3",
  "rapidfuzz>=3.9,<4",
  "scikit-learn>=1.5,<2",
  "streamlit>=1.36,<2",
  "plotly>=5.18,<6",
  "networkx>=3.2,<4",
  "duckduckgo-search>=7.0,<8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]
llm = [
  "httpx>=0.27,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
