[package]
name = "nyne-er-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ndarray.workspace = true
rand.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3.20"
